# hmat-oss

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
CMake/: FindCBLAS.cmake  FindJeMalloc.cmake  FindMKL.cmake  GitVersion.cmake  HMATConfig.cmake.in  HMATConfigVersion.cmake.in  config.h.in  hmat-config-oss.h.in  hmat-config.h.in  toolchain-i686-w64-mingw32.cmake
doc/: Doxyfile  README
examples/: c-cholesky-fpcompression.c  c-cholesky.c  c-choleskyComp.c  c-cylinder.c  c-simple-cylinder.c  c-simple-fpcompression.c  c-simple-kriging.c  c-test-gemm.c  cylinder.cpp  examples.h  hodlrvsllt.c  kriging.cpp  testsCompression.c
include/hmat/: hmat.h
src/: CMakeLists.txt  LICENSE.md  README.md  admissibility.cpp  admissibility.hpp  assembly.cpp  assembly.hpp  blas_overloads.hpp  c_default_interface.cpp  c_wrapping.hpp  cluster_assembly_function.cpp  cluster_assembly_function.hpp  cluster_tree.cpp  cluster_tree.hpp  clustering.cpp  clustering.hpp  compression.cpp  compression.hpp  coordinates.cpp  coordinates.hpp  cuda_manager.hpp  customTruncate.cpp  customTruncate.hpp  data_types.cpp  data_types.hpp  default_engine.cpp  default_engine.hpp  disable_threading.cpp  disable_threading.hpp  engine_settings.hpp  fp_compression.cpp  fp_compression.hpp  fromdouble.cpp  fromdouble.hpp  full_matrix.cpp  full_matrix.hpp  h_matrix.cpp  h_matrix.hpp  hmat_cpp_interface.cpp  hmat_cpp_interface.hpp  (+32 more)
src/CMake/: FindMKL.cmake  GitVersion.cmake  HMATConfig.cmake.in  hmat-config.h.in
src/common/: chrono.h  context.cpp  context.hpp  data_recorder.hpp  memory_instrumentation.cpp  memory_instrumentation.hpp  my_assert.h  timeline.cpp  timeline.hpp
src/include/hmat/: hmat.h
